<resources>
    <!-- NAMES -->
    <string name="app_name">Gamebox2019</string>
    <string name="credits">Created by:</string>
    <string name="oceane">MERLO Océane</string>
    <string name="marieme">NDIAYE Marième</string>
    <string name="baptiste">LLORET Baptiste</string>
    <string name="paul">PUTIER Paul</string>

    <!-- Game detail page fields -->
    <string name="GameInfo">Game Info</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="nbplayer">Nb players:</string>
    <string name="year">Year:</string>
    <string name="play">Play</string>
    <string name="more">More info</string>
    <string name="playerName">Player name</string>
    <string name="nameText">Name:</string>
    <string name="emptyLetter">_</string>
    <string name="triedLetters">Already tried:</string>
    <string name="remainingTries">Remaining tries:</string>
    <string name="tryButton">TRY</string>

    <!-- Game List -->
    <string name="empty_list">The list of games cannot be loaded because you are probably not connected on the internet
        or the server fail to respond.
    </string>
    <string name="default_game">default</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="picture_game_description">Picture of the game.</string>
    <string name="playable_description">Picture that show if the game is playable or not.</string>
    <string name="emptyScore">There is no scores to be shown !</string>
    <string name="menuButton">Return to game list</string>
    <string name="allScores">All Scores</string>
</resources>
