<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/credit_container">

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/credit_guideline"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.8"/>
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/color_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#E42F78CA" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/credit_guideline" app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_credits"
            android:textColor="#FFFFFF" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/credit_guideline" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/barrieroceane"/>
    <TextView
            android:text="@string/oceane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_oceane"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/txt_credits" android:layout_marginStart="28dp"
            app:layout_constraintBottom_toTopOf="@+id/barriermarieme"/>
    <TextView
            android:text="@string/marieme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_marieme"
            app:layout_constraintStart_toStartOf="@+id/txt_oceane"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/barrierbaptiste"/>
    <TextView
            android:text="@string/baptiste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_baptiste"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/txt_marieme"
            app:layout_constraintBottom_toTopOf="@+id/barrierPaul"/>
    <TextView
            android:text="@string/paul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_paul"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/txt_baptiste"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
    <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/barrierPaul" app:barrierDirection="top"
                                              app:constraint_referenced_ids="txt_paul"
                                              tools:layout_editor_absoluteY="731dp"/>
    <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/barrierbaptiste" app:barrierDirection="top"
                                              app:constraint_referenced_ids="txt_baptiste"
                                              tools:layout_editor_absoluteY="731dp"/>
    <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/barriermarieme" app:barrierDirection="top"
                                              app:constraint_referenced_ids="txt_marieme"
                                              tools:layout_editor_absoluteY="731dp"/>
    <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/barrieroceane" app:barrierDirection="top"
                                              app:constraint_referenced_ids="txt_oceane"
                                              tools:layout_editor_absoluteY="731dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>