<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HangmanPlayFragment">

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.32"
            android:id="@+id/GuideV35"
    />
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45"
            android:id="@+id/GuideV45"
    />
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55"
            android:id="@+id/GuideV55"
    />
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50"
            android:id="@+id/hangmanGuideMiddle"
    />
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65"
            android:id="@+id/GuideV65"
    />
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55"
            android:id="@+id/GuideH40"
    />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        android:id="@+id/GuideH65"
    />

    <!-- Game info -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remainingCount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:text="@string/remainingTries"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/triedLetters"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/remainingCount"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:text="@string/triedLetters"
    />

    <!-- Hangman Letters -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/GuideH40"
            app:layout_constraintRight_toLeftOf="@id/GuideV35"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginStart="2dp"
            android:text="@string/emptyLetter"
            android:textSize="40sp"
            android:id="@+id/l0"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/GuideH40"
            app:layout_constraintLeft_toRightOf="@id/l0"
            android:layout_marginStart="2dp"
            android:text="@string/emptyLetter"
            android:textSize="40sp"
            android:id="@+id/l1"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/GuideH40"
            app:layout_constraintLeft_toRightOf="@id/l1"
            android:layout_marginStart="2dp"
            android:text="@string/emptyLetter"
            android:textSize="40sp"
            android:id="@+id/l2"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/GuideH40"
            app:layout_constraintLeft_toRightOf="@id/l2"
            android:layout_marginStart="2dp"
            android:text="@string/emptyLetter"
            android:textSize="40sp"
            android:id="@+id/l3"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/GuideH40"
            app:layout_constraintLeft_toRightOf="@id/l3"
            android:layout_marginStart="2dp"
            android:text="@string/emptyLetter"
            android:textSize="40sp"
            android:id="@+id/l4"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/GuideH40"
            app:layout_constraintLeft_toRightOf="@id/l4"
            android:layout_marginStart="2dp"
            android:text="@string/emptyLetter"
            android:textSize="40sp"
            android:id="@+id/l5"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/GuideH40"
            app:layout_constraintLeft_toRightOf="@id/l5"
            android:layout_marginStart="2dp"
            android:text="@string/emptyLetter"
            android:textSize="40sp"
            android:id="@+id/l6"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/GuideH40"
            app:layout_constraintLeft_toRightOf="@id/l6"
            android:layout_marginStart="2dp"
            android:text="@string/emptyLetter"
            android:textSize="40sp"
            android:id="@+id/l7"
    />

    <!-- Player letter -->
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tryLetter"
            app:layout_constraintLeft_toLeftOf="@id/GuideV35"
            app:layout_constraintRight_toLeftOf="@id/GuideV45"
            app:layout_constraintBottom_toTopOf="@id/GuideH65"
            android:layout_marginBottom="5dp"
            android:textSize="40sp"
            android:textAlignment="center"
            android:maxLength="1"
            android:background="@color/lightGray"
    />
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/tryButton"
            app:layout_constraintRight_toLeftOf="@id/GuideV65"
            app:layout_constraintLeft_toRightOf="@id/GuideV45"
            app:layout_constraintBottom_toTopOf="@id/GuideH65"
            app:layout_constraintTop_toTopOf="@+id/tryLetter"
            android:text="@string/tryButton"
    />
    <Button
            android:text="@string/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hangman_back_menu" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/GuideH65" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
